2001-10-30  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-style.c (sheet_style_most_common_in_col) : typo.

	http://bugzilla.gnome.org/show_bug.cgi?id=63409
	* src/workbook-control-gui.c (workbook_control_gui_init) : fix
	position of freeze menu.

	http://bugzilla.gnome.org/show_bug.cgi?id=63415
	(wbcg_delete_event) : typo.

	http://bugzilla.gnome.org/show_bug.cgi?id=62683
	* src/sheet-object.c (sheet_object_set_sheet) : adding an object may
	  extend the bounds.

2001-10-30  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/ranges.c/h (global_range_contained) : new routine testing whether 
	  a range is contained in another, similar to range_contained.

2001-10-30  Morten Welinder  <terra@diku.dk>

	* src/validation.c: #include <config.h>
	* src/style-condition.c: Ditto.

2001-10-27  Jody Goldberg <jgoldberg@home.com>

	* src/sheet.c (colrow_move) : trivial optimization to speed col/row
	  ins/del.

	* src/sheet-style.c (rstyle_ctor) : store the sheet to look up partial
	  styles and use sheet_style_find for complete styles.
	(sheet_style_set_range) : signature change to rstyle_ctor.
	(sheet_style_set_pos) : ditto.
	(sheet_style_apply_range) : ditto.
	(sheet_style_find) : new.
	(sheet_style_shutdown) : unref the styles in the sheet hash.
	(cb_accumulate_count) : new.
	(cb_find_max) : new.
	(sheet_style_most_common_in_row) : new utility for use in the XL
	  exporter.

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (gnumeric_xml_write_workbook) : re-enable compression.

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* src/value.c (value_get_as_string) : fix long standing var alias.

2001-10-29  Morten Welinder  <terra@diku.dk>

	* src/eval.c (add_range_dep): Fix for large ranges.

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* src/number-match.c (format_create_regexp) : escape escaped
	  characters in regexps.

2001-10-29  Jody Goldberg <jgoldberg@home.com>
